# sliding-puzzle-solver

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
docs/: implementation.md  instructions.md  specification.md  testing.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
src/: board.py  clock.py  game_loop.py  ida_star.py  index.py  load_image.py  logger.py  renderer.py  ui.py
src/performance/: performance.py  performance_plot.py  plog_backup
src/sprites/: tile.py
src/tests/: board_test.py  game_loop_test.py  ida_star_test.py
src/utilities/: event_queue.py  load_image.py
