[tool.poetry]
name = "sliding-puzzle-solver"
version = "0.1.0"
description = ""
authors = ["akskokki <akseli.kokki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.0.0"
pygame = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
pytest = "^7.2.2"
autopep8 = "^2.0.2"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
